# FDML

./: .gitignore  CLI_TOOLS_QUICK_REFERENCE.md  CLI_TOOLS_ROADMAP.md  CLI_TOOLS_TECHNICAL_SPEC.md  Cargo.toml  FDML-1.3-en.md  FDML-1.3-ru.md  LICENSE  README.md  ROADMAP.md  USAGE.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
examples/: README.md
examples/e-commerce/: ecommerce.fdml
examples/e-commerce/migrations/: 001_add_user_preferences.yaml  002_add_product_reviews.yaml
fmdl-spec/: FDML-1.3.3-extension-en.md  FDML-1.3.4-extension-en.md
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  commands.rs  mod.rs
src/generators/: go.rs  mod.rs  python.rs  test_gen.rs  typescript.rs
src/migration/: mod.rs  runner.rs  tests.rs
src/parser/: ast.rs  lexer.rs  mod.rs  parser.rs
src/project/: init.rs  mod.rs
src/validator/: mod.rs  rules.rs
tests/: cli_tests.rs  workflow_test.rs
